--- a/MiniRisViewer.Service/packages.config
+++ b/MiniRisViewer.Service/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
   <package id="ReactiveProperty" version="5.3.2" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
-  <package id="System.Reactive" version="4.1.2" targetFramework="net472" />
+  <package id="System.Reactive" version="4.1.3" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
