--- a/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
+++ b/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
@@ -84,10 +84,22 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro">
+      <Version>1.6.5</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Wpf" Version="7.1.0.431&#xD;" />
     <PackageReference Include="ReactiveProperty">
       <Version>5.3.2</Version>
     </PackageReference>
+    <PackageReference Include="System.Reactive">
+      <Version>4.1.3</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MiniRisViewer.Service\MiniRisViewer.Domain.csproj">
+      <Project>{1b2eb201-6585-4c08-8cf3-38ae0b4b940e}</Project>
+      <Name>MiniRisViewer.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
