--- a/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
+++ b/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -63,6 +64,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Helper\StatusConverter.cs" />
     <Compile Include="ViewModels\ServiceStatusViewModel.cs" />
     <Compile Include="Views\ServiceStatusView.xaml.cs">
       <DependentUpon>ServiceStatusView.xaml</DependentUpon>
