EpithetOfUsをAliasに名称を変更

--- a/MiniRisViewer.Service/MiniRisViewer.Domain.csproj
+++ b/MiniRisViewer.Service/MiniRisViewer.Domain.csproj
@@ -99,7 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AppConfig.cs" />
-    <Compile Include="Model\EpithetOfUs.cs" />
+    <Compile Include="Model\Ailias.cs" />
     <Compile Include="Model\LogManager.cs" />
     <Compile Include="Model\ServiceManager.cs" />
     <Compile Include="Model\ServiceStatus.cs" />
