--- a/MiniRisViewer.Domain/MiniRisViewer.Domain.csproj
+++ b/MiniRisViewer.Domain/MiniRisViewer.Domain.csproj
@@ -105,6 +105,8 @@
     <Compile Include="Model\ServiceList.cs" />
     <Compile Include="Service\ConfigLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Service.cs" />
+    <Compile Include="Service\Services.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
