各サービスのbindや処理をまとめた、xamlはべた書きのまま

--- a/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
+++ b/MiniRisViewer.ServiceStatus/MiniRisViewer.ServiceStatus.csproj
@@ -65,6 +65,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Helper\StatusConverter.cs" />
+    <Compile Include="ViewModels\ServiceStatusViewModel__.cs" />
     <Compile Include="ViewModels\ServiceStatusViewModel.cs" />
     <Compile Include="Views\ServiceStatusView.xaml.cs">
       <DependentUpon>ServiceStatusView.xaml</DependentUpon>
