--- a/MiniRisViewer.Domain/packages.config
+++ b/MiniRisViewer.Domain/packages.config
@@ -6,6 +6,9 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.12" targetFramework="net472" />
+  <package id="NLog" version="4.6.1" targetFramework="net472" />
+  <package id="NLog.Config" version="4.6.1" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.6.1" targetFramework="net472" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
   <package id="ReactiveProperty" version="5.3.2" targetFramework="net472" />
