--- a/MiniRisViewer.Domain/app.config
+++ b/MiniRisViewer.Domain/app.config
@@ -1,11 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
+
+    <configSections>
+      <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    </configSections>
+    <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      <targets>
+        <target name="event"
+                xsi:type="File"
+                encoding="UTF-8"
+                lineEnding="LF"
+                layout="[${longdate}] [${uppercase:${level:padding=5}}] ${message} - ${callsite}() ${exception:format=tostring}"
+                fileName="C:/Tool/logs/event.log"
+                archiveNumbering="Date"
+                archiveFileName="${basedir}/logs/archive/{#}-event.log"
+                archiveEvery="Day" archiveDateFormat="yyyyMMdd"
+                maxArchiveFiles="7"/>
+        <target name="error"
+                xsi:type="File"
+                encoding="UTF-8"
+                lineEnding="LF"
+                layout="[${longdate}] [${uppercase:${level:padding=5}}] ${message} - ${callsite}() ${exception:format=tostring}"
+                fileName="${basedir}/logs/error.log"
+                archiveNumbering="Date"
+                archiveFileName="${basedir}/logs/archive/{#}-error.log"
+                archiveEvery="Day" archiveDateFormat="yyyyMMdd"
+                maxArchiveFiles="7"/>
+      </targets>
+      <rules>
+        <logger name="*" levels="Info,Warn" writeTo="event"/>
+        <logger name="*" levels="Error,Fatal" writeTo="error"/>
+      </rules>
+    </nlog>
+  </configuration>
+
+
+
