--- a/MiniRisViewer/MiniRisViewer.csproj
+++ b/MiniRisViewer/MiniRisViewer.csproj
@@ -15,6 +15,7 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -95,15 +96,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.manifest" />
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="App.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="NLog.xsd">
       <SubType>Designer</SubType>
-    </None>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -127,7 +123,7 @@
       <Version>7.1.0.431</Version>
     </PackageReference>
     <PackageReference Include="ReactiveProperty">
-      <Version>5.3.2</Version>
+      <Version>5.4.0</Version>
     </PackageReference>
     <PackageReference Include="System.Reactive">
       <Version>4.1.3</Version>
@@ -147,7 +143,9 @@
     <Resource Include="Resource\toolbar_find.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Config.xml" />
+    <Resource Include="Config.xml">
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
