なんとかダイアログの表示、ボタンからの表示となっているので、処理から表示させる方法を探し中

--- a/MiniRisViewer/MiniRisViewer.csproj
+++ b/MiniRisViewer/MiniRisViewer.csproj
@@ -71,6 +71,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Services\DialogService.cs" />
+    <Compile Include="Services\IDialogService.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -130,6 +132,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Prism.Interactivity.MahAppsPack.git\Prism.Interactivity.MahAppsPack\Prism.Interactivity.MahAppsPack.csproj">
+      <Project>{4e4ed199-c227-4492-a259-a3da10946172}</Project>
+      <Name>Prism.Interactivity.MahAppsPack</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MiniRisViewer.Domain\MiniRisViewer.Domain.csproj">
       <Project>{1B2EB201-6585-4C08-8CF3-38AE0B4B940E}</Project>
       <Name>MiniRisViewer.Domain</Name>
