--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+MiniRisViewer/Services/IDialogService.cs
+MiniRisViewer/Services/DialogService.cs
+MiniRisViewer.ServiceStatus/MetroWindowStyle.xaml
