--- a/MiniRisViewer.Domain/MiniRisViewer.Domain.csproj
+++ b/MiniRisViewer.Domain/MiniRisViewer.Domain.csproj
@@ -106,16 +106,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DomainModule.cs" />
     <Compile Include="Model\Ailias.cs" />
     <Compile Include="Model\ServiceManager.cs" />
     <Compile Include="Model\ServiceAdministrator.cs" />
     <Compile Include="Service\ConfigLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DialogService.cs" />
+    <Compile Include="Service\IDialogService.cs" />
     <Compile Include="Service\Service.cs" />
     <Compile Include="Service\Config.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
